[CSS Shapes] polygon default fill-rule should be omitted from the serialization https://bugs.webkit.org/show_bug.cgi?id=129840

Reviewed by Dirk Schulze.

Source/WebCore:

Modifying the default polygon string opening to be "polygon(" rather than
"polygon(nonzero".

Updated existing parsing tests.

* css/CSSBasicShapes.cpp:
(WebCore::buildPolygonString):

LayoutTests:

Modifying tests to expect the default fill-rule to be omitted. In addition,
animation-test-helpers now parses its arguments as an unbounded list, rather
than as a fixed number of capturing parentheses.

* animations/resources/animation-test-helpers.js:
* css3/masking/clip-path-animation-expected.txt:
* css3/masking/clip-path-animation.html:
* fast/masking/parsing-clip-path-shape-expected.txt:
* fast/masking/parsing-clip-path-shape.html:
* fast/shapes/parsing/parsing-shape-inside-expected.txt:
* fast/shapes/parsing/parsing-shape-lengths-expected.txt:
* fast/shapes/parsing/parsing-shape-lengths.html:
* fast/shapes/parsing/parsing-shape-outside-expected.txt:
* fast/shapes/parsing/parsing-test-utils.js:
* fast/shapes/shape-inside/shape-inside-animation-expected.txt:
* fast/shapes/shape-inside/shape-inside-animation.html:
* fast/shapes/shape-outside-floats/shape-outside-animation-expected.txt:
* fast/shapes/shape-outside-floats/shape-outside-animation.html:


Canonical link: https://commits.webkit.org/148227@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@165638 268f45cc-cd09-0410-ab3c-d52691b4dbfc